syntax = "proto3";

package vou.proto;

import "google/protobuf/timestamp.proto";

option go_package = "VOU-Server/proto/gen";

message Event {
  string name = 1;
  string voucher_quantity = 2;
  string game_id = 3;
  string store_id = 4;
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Timestamp end_time = 6;
}

