syntax = "proto3";

package vou.proto;

import "event-quiz/event.proto";

option go_package = "VOU-Server/proto/gen";

message GetEventsOfOwnerRequest {
  string owner = 1;
}

message GetEventsOfOwnerResponse {
  repeated Event events = 1;
}